2015-02-26  Andreas Schwab  <schwab@suse.de>

	[BZ #18032]
	* posix/fnmatch_loop.c (FCT): Remove extra increment when skipping
	over collating symbol inside a bracket expression.  Minor cleanup.
	* posix/tst-fnmatch3.c (do_test): Add test case.

2015-02-26  Joseph Myers  <joseph@codesourcery.com>

	[BZ #18029]
	* sysdeps/ieee754/ldbl-128ibm/e_ilogbl.c (__ieee754_ilogbl):
	Adjust exponent of power of 2 down when low part has opposite
	sign.
	* math/libm-test.inc (ilogb_test_data): Add more tests.

2015-02-26  Alexandre Oliva  <aoliva@redhat.com>

	[BZ #15969]
	* locale/findlocale.c (_nl_find_locale): Fix constness error in
	the previous change.

	[BZ #15969]
	* locale/findlocale.c (_nl_find_locale): Retry archive search
	after alias expansion.

2015-02-25  Roland McGrath  <roland@hack.frob.com>

	* iconv/tst-iconv3.c (main): Converted to ...
	(do_test): ... this.
	(TEST_FUNCTION): New macro.
	Include test-skeleton.c.

	* iconv/tst-iconv5.c (testcode, number): Make variables static const.
	(convert): Make function static.
	(test_unalign): Likewise.  Add const to argument pointee types.
	(main): Replace with static function do_test.
	Print "Succeeded." only if RET is zero.
	(TEST_FUNCTION): New macro.
	Include test-skeleton.c.

	* iconv/gconv_conf.c (__gconv_get_path): Don't crash if __getcwd
	returns a null pointer.

2015-02-25  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/multiarch/memmove-ppc64.c: Define memcpy
	to __memcpy_ppc only for static builds.

2015-02-25  Joseph Myers  <joseph@codesourcery.com>

	[BZ #18020]
	* sysdeps/ieee754/ldbl-128ibm/s_asinhl.c (__asinhl): Use 2**56 and
	2**-56 not 2**28 and 2**-29 as thresholds for simpler formulas.
	* math/auto-libm-test-in: Add more tests of asinh.
	* math/auto-libm-test-out: Regenerated.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2015-02-25  Cong Wang  <xiyou.wangcong@gmail.com>

	[BZ #15850]