@@ -1,3 +1,10 @@
+2015-02-26  Joseph Myers  <joseph@codesourcery.com>
+
+	[BZ #18030]
+	* sysdeps/ieee754/ldbl-128ibm/s_logbl.c (__logbl): Adjust exponent
+	of power of 2 down when low part has opposite sign.
+	* math/libm-test.inc (logb_test_data): Add more tests.
+
 2015-02-26  Andreas Schwab  <schwab@suse.de>
 
 	[BZ #18032]
